[project]
name = "wh40k-faction-overlap"
version = "0.1.0"
description = "Analyze public Reddit community overlap among Warhammer 40k faction communities."
requires-python = ">=3.11"
dependencies = [
  "praw>=7.7,<8",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "networkx>=3.2,<4",
  "matplotlib>=3.8,<4",
  "scikit-learn>=1.4,<2",
  "python-louvain>=0.16,<1",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pylint>=3.2,<4",
  "ruff>=0.4,<1",
  "pytest>=8,<9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
